--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   dio: ^5.4.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   flutter_credit_card: ^4.0.1
+  flutter_paypal_payment: ^1.0.6
   flutter_stripe: ^10.1.1
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
